# Heart-Disease-Prediction-model

./: .vercelignore  app.py  index.py  pyproject.toml  python.toml  requirements.txt  vercel.json  versel.json
api/: index.py
artifacts/: model.pkl  preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: logger.py  utils.py
src/NOTEBOOK/: EDA.ipynb  modeltrainer.ipynb
src/NOTEBOOK/catboost_info/: catboost_training.json  time_left.tsv
src/NOTEBOOK/catboost_info/learn/: events.out.tfevents
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home.html  index.html  style.css
