[project]
name = "heart-disease-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "catboost",
    "scipy",
    "xgboost",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"